Release history for Comment-Spell

0.001005
	Use gtar to create a distribution on Macs

0.001004	April 30, 2021 at 06:49:45 AM EDT
	Fix http://www.cpantesters.org/cpan/report/df98ae17-811c-1014-abee-cf123d004874

0.001003	Thu Apr 29 09:20:35 EDT 2021
	New maintainer
	Added more CI testing

{{$NEXT}}

0.001002 2017-03-08T16:08:55Z e672660
 - Attempt to support 5.6 ( untested, dependenices may require newer )
 - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot

 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +13 ↑4 -3 (recommends: +1, suggests: ↑2)
 - runtime: +1 ↓1 (recommends: +2)
 - test: +1 ↓1 (recommends: ↑1 ↓1)

 [Documentation]
 - Document all functions internally in a basic non-pod way, because POD is ugly.

0.001001 2014-09-28T04:36:41Z
 [Bugfix]
 - Require newer version of Pod::Wordlist

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - runtime: ↑1

0.001000 2014-09-26T02:46:34Z
 - First version.