@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use ExtUtils::MakeMaker 6.64;	# 6.64 for TEST_REQUIRES
+use ExtUtils::MakeMaker;
 
 my $dist = {
 	COMPRESS => 'gzip -9f',
@@ -30,6 +30,7 @@ WriteMakefile(
 		'Test::Needs' => 0
 	}, PREREQ_PM => {
 		'Carp' => 0,
+		'ExtUtils::MakeMaker' => 6.64,	# For TEST_REQUIRES
 		'Moo' => 0,
 		'Pod::Wordlist' => 1.07,
 		'PPI' => 0,
