@@ -2,6 +2,7 @@ Release history for Comment-Spell
 
 0.001005
 	Use gtar to create a distribution on Macs
+	set_output_string checks the argument type
 
 0.001004	April 30, 2021 at 06:49:45 AM EDT
 	Fix http://www.cpantesters.org/cpan/report/df98ae17-811c-1014-abee-cf123d004874
